[project]
name = "eizins-nippon-colors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "ruff>=0.12.2",
    "pillow>=10.0.0",
    "colormath>=3.0.0",
    "black>=25.1.0",
]
